--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cookie-parser": "~1.4.4",
     "core-js": "^3.8.3",
+    "debug": "~2.6.9",
     "express": "^4.18.1",
     "html2canvas": "^1.4.1",
-    "vue": "^2.6.14",
-    "vue-meta": "^2.4.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "puppeteer": "^14.3.0",
+    "puppeteer-core": "^14.3.0",
+    "vue": "^2.6.14",
+    "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
